--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://AhmedFarag18.github.io/Ultra-React-Profile/",
+  "homepage": "https://ahmedfarag18.github.io/Ultra-React-Profile",
   "name": "construction",
   "version": "0.1.0",
   "private": true,
